# rust-manga-translation-typesetting-assistant

./: Cargo.toml  LICENSE  README.md
src/: main.rs
