[package]
name = "rust-manga-translation-typesetting-assistant"
version = "0.1.0"
edition = "2021"

# egui_extras with all_loaders enables support for various image sources.
# image crate with jpeg and png features allows decoding these image formats.
[dependencies]
egui = "0.31.1"     # added with cargo add egui
eframe = "0.31.1"   # added with cargo add eframe
egui_extras = "0.31.1"  # added with cargo add egui_extras. Fatures such as all_loaders,image are not needed as image loading is done via image crate (allows processing of images)
image = { version = "0.25.6", features = ["jpeg", "png"] }    # added with cargo add image (needed for image loaders to work)
log = "0.4.27"          #added with cargo add log
env_logger = "0.11.8"   # added with cargo add env_logger
rfd = "0.15.3"  # file dialogue, added with cargo add rfd
uni-ocr = { git = "https://github.com/mediar-ai/uniocr.git" }
tokio = "1.44.2"
